added comments to code

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Sultan",
   "license": "ISC",
   "dependencies": {
-    "node-fetch": "^2.1.2",
-    "twit": "^2.2.11"
+    "node-fetch": "^2.2.0",
+    "twit": "^2.2.11",
+    "twitter-node-client": "0.0.6"
   }
 }
